--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,3 +21,10 @@ jobs:
       run: gradle wrapper
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: Output
+        path: |
+          share/build/generated/*
+        compression-level: 9
